# brave-core

./: BUILD.gn  DEPS  Jenkinsfile  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_main_delegate.cc  brave_main_delegate_browsertest.cc  generated_resources.grd
browser/: about_flags.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/brave_ads/: BUILD.gn  brave_ads_host.cc  brave_ads_host.h  (+3 more)
common/: pref_names.cc  pref_names.h
components/brave_rewards_ffi/: BUILD.gn  implementation.cc
patches/: chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-profiles-profile_impl.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-views-frame-browser_view.cc.patch  chrome-test-BUILD.gn.patch  components-content_settings-core-browser-cookie_settings.cc.patch  content-browser-renderer_host-navigation_request.cc.patch  ios-chrome-app-BUILD.gn.patch  net-cookies-canonical_cookie.cc.patch  services-network-cookie_settings.cc.patch  third_party-blink-renderer-bindings-generated_in_modules.gni.patch  third_party-blink-renderer-bindings-idl_in_modules.gni.patch  tools-metrics-histograms-metadata-histogram_suffixes_list.xml.patch
test/: BUILD.gn
(+132 files in other folders)
