# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//brave/build/cargo.gni")

rust_ffi("brave_rewards_ffi") {
  shared_library_define = "BRAVE_REWARDS_SHARED_LIBRARY"
  implementation_define = "BRAVE_REWARDS_IMPLEMENTATION"

  sources = [
    "br-rs/brave-rewards-cxx/src/shim.hpp",
    "br-rs/brave-rewards-cxx/src/wrapper.cpp",
    "br-rs/brave-rewards-cxx/src/wrapper.hpp"
  ]
}

rust_crate("rust_lib") {
  inputs = [
    "br-rs/brave-rewards-ffi/Cargo.toml",
    "br-rs/brave-rewards-ffi/cbindgen.toml",
    "br-rs/brave-rewards-ffi/src/lib.rs",
  ]
}
